string utils removed